--- a/Builds/pom.xml
+++ b/Builds/pom.xml
@@ -7,9 +7,11 @@
   <version>1.0</version>
   <name>Builds</name>
   <dependencies>
-    <groupId>io.fabric8</groupId>
-    <artifactId>fabric8-build-workflow</artifactId>
-    <version>2.2-SNAPSHOT</version>
+    <dependency>
+      <groupId>io.fabric8</groupId>
+      <artifactId>fabric8-build-workflow</artifactId>
+      <version>2.2-SNAPSHOT</version>
+    </dependency>
   </dependencies>
 
   <build>
