--- a/Builds/pom.xml
+++ b/Builds/pom.xml
@@ -10,7 +10,7 @@
     <dependency>
       <groupId>io.fabric8</groupId>
       <artifactId>fabric8-build-workflow</artifactId>
-      <version>2.2-SNAPSHOT</version>
+      <version>2.0.38</version>
     </dependency>
   </dependencies>
 
