--- a/Builds/pom.xml
+++ b/Builds/pom.xml
@@ -8,6 +8,11 @@
   <name>Builds</name>
   <dependencies>
     <dependency>
+      <groupId>org.kie</groupId>
+      <artifactId>kie-api</artifactId>
+      <version>6.2.0.Final</version>
+    </dependency>
+    <dependency>
       <groupId>io.fabric8</groupId>
       <artifactId>fabric8-build-workflow</artifactId>
       <version>2.0.38</version>
