--- a/Builds/pom.xml
+++ b/Builds/pom.xml
@@ -40,6 +40,7 @@
       <groupId>org.kie</groupId>
       <artifactId>kie-api</artifactId>
       <version>6.2.0.Final</version>
+      <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>io.fabric8</groupId>
