--- a/Builds/pom.xml
+++ b/Builds/pom.xml
@@ -42,13 +42,11 @@
       <version>6.2.0.Final</version>
       <scope>provided</scope>
     </dependency>
-<!--
     <dependency>
       <groupId>io.fabric8</groupId>
-      <artifactId>fabric8-build-workflow</artifactId>
-      <version>2.0.38</version>
+      <artifactId>fabric8-jbpm-workitems</artifactId>
+      <version>2.0.39</version>
     </dependency>
--->
   </dependencies>
 
   <build>
