added back mandatory repo

--- a/Builds/pom.xml
+++ b/Builds/pom.xml
@@ -7,9 +7,7 @@
   <version>1.0</version>
   <name>Builds</name>
 
-<!--
-  TODO lets avoid due to DNS issues on OpenShift
-
+  <!-- this is required for org.jboss.dashboard-builder:dashboard-builder-bom:pom -->
   <repositories>
     <repository>
       <id>jboss-nexus</id>
@@ -37,7 +35,6 @@
       </snapshots>
     </pluginRepository>
   </pluginRepositories>
--->
 
   <dependencies>
     <dependency>
